# sikte

./: .clang-format  .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TASKS.md  justfile
.github/workflows/: rust.yml
scripts/: docker-build.sh  docker-test.sh
sikte/: Cargo.toml  build.rs
sikte-common/: Cargo.toml
sikte-common/src/: lib.rs  sched_process_fork.rs  trace_points.rs
sikte-common/src/constants/: attach_points.rs  program_names.rs
sikte-common/src/raw_tracepoints/: syscalls.rs
sikte-ebpf/: Cargo.toml  README.md  build.rs
sikte-ebpf/src/: main.rs  perf_events.rs  raw_trace_points.bpf.c  raw_trace_points.h  raw_trace_points.rs  sched_process_fork.rs  trace_points.rs
sikte-ebpf/src/common/: macros.rs  mod.rs  pid_allowlist.rs  ringbufs.rs
sikte-ebpf/src/sched_process/: exit.rs  fork.rs  maps.rs  mod.rs
sikte/ebpf-src/: raw_trace_points.bpf.c  raw_trace_points.h
sikte/ebpf-src/vmlinux/: vmlinux.h
sikte/src/: ebpf.rs  events.rs  lib.rs  main.rs  memlock_rlimit.rs  programs.rs
sikte/src/bpf/: sikte.bpf.c  sikte.h
sikte/src/cli/: args.rs  mod.rs
sikte/src/common/: generated_types.rs  generic_types.rs  mod.rs
sikte/src/common/constants/: attach_points.rs  mod.rs  program_names.rs
sikte/src/common/raw_tracepoints/: syscalls.rs
sikte/src/consumers/: mod.rs
sikte/src/ebpf/: ebpf.rs  error.rs  map_types.rs  mod.rs  sikte_ebpf.rs
sikte/src/producers/: event_publisher.rs  mod.rs
sikte/src/producers/perf_events/: main.rs
sikte/src/producers/syscalls/: main.rs  mod.rs
sikte/src/publishers/: event_publisher.rs  mod.rs
sikte/src/publishers/perf_events/: main.rs
sikte/src/publishers/syscalls/: main.rs  mod.rs  producer.rs  publisher.rs  table.rs
sikte/src/subscribers/: event_subscriber.rs  mod.rs  shell.rs
sikte/src/syscalls/: main.rs  table.rs
sikte/tests/: syscalls.rs
