[workspace]
resolver = "2"
members = ["sikte", "sikte-common", "sikte-ebpf"]
default-members = ["sikte", "sikte-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya.git", branch = "main", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya.git", branch = "main", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya.git", branch = "main", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya.git", branch = "main", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya.git", branch = "main", default-features = false }

anyhow = { version = "1", default-features = false }
bytemuck = { version = "1.23.2", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = [
    "std",
    "derive",
    "help",
    "usage",
    "error-context",
    "suggestions",
    "color",
] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.159", default-features = false }
itertools = { version = "0.14.0", default-features = false }
log = { version = "0.4.22", default-features = false }
thiserror = { version = "2.0.16", default-features = false }
tokio = { version = "1.40.0", default-features = false }
which = { version = "6.0.0", default-features = false }

[profile.release.package.sikte-ebpf]
debug = 2
codegen-units = 1
