[package]
name = "sikte"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
sikte-common = { path = "../sikte-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
libbpf-rs = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "net",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }
thiserror = { workspace = true }

[build-dependencies]
libbpf-cargo = { workspace = true }
sikte-ebpf = { path = "../sikte-ebpf" }

[[bin]]
name = "sikte"
path = "src/main.rs"
