[package]
name = "sikte"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
libbpf-rs = { workspace = true }
bytemuck = { workspace = true, features = ["derive"] }
clap = { workspace = true }
env_logger = { workspace = true }
itertools = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
plain = "0.2"
tokio = { workspace = true, features = [
    "macros",
    "net",
    "process",
    "rt",
    "rt-multi-thread",
    "signal",
    "sync",
] }
thiserror = { workspace = true }

[build-dependencies]
libbpf-cargo = { workspace = true }
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "991dd4b8dfd8c9d62ce8999521b24f61d9b7fc52" }

[[bin]]
name = "sikte"
path = "src/main.rs"
